<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="60dp"
                android:src="@mipmap/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="45dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayoutEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:textColorHint="?attr/textColorHint"
                app:boxStrokeColor="?attr/boxStrokeColor"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    android:textColor="?attr/textColorInputUser"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textImputLayoutContraseña"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="?attr/textColorHint"
                app:boxStrokeColor="?attr/boxStrokeColor"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextContraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contraseña_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColor="?attr/textColorInputUser"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonIniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/txt_IniciarSesion"
                android:textSize="15sp"
                android:textStyle="bold"
                app:backgroundTint="?attr/buttonColor"
                app:cornerRadius="15dp" />

            <TextView
                android:id="@+id/textViewButtonRegistro"
                android:layout_width="match_parent"
                android:foreground="?attr/selectableItemBackground"
                android:clickable="true"
                android:layout_height="36dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="@dimen/margen_general"
                android:layout_marginEnd="@dimen/margen_general"
                android:text="@string/txt_Registrarse"
                android:gravity="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:background="@drawable/borde_text_view"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margen_general"
                android:layout_gravity="center"
                android:text="@string/login_olvidadoContraseña"
                android:textColor="?attr/textColor"
                android:textStyle="bold" />

            <!--<LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margen_general"
                android:layout_marginBottom="@dimen/margen_general">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_cuenta"
                    android:textColor="?attr/textColor" />

                <TextView
                    android:id="@+id/textViewRegistrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="14dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/txt_Registrarse"
                    android:textColor="?attr/textColor"
                    android:textStyle="bold" />
            </LinearLayout>-->

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>