<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/relativeLayoutActivityConfiguracion"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar_basica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.core.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="55dp"
            tools:context=".activities.ActivityConfiguracion">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/backgroundColor"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_general"
                    android:textSize="20sp"
                    android:text="@string/config_general"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/linearLayoutIdiomas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margen_general"
                    android:orientation="vertical"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margen_general"
                        android:textSize="15sp"
                        android:text="@string/config_idioma"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margen_general"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp"
                        android:textColor="?attr/textColorInputUser"
                        android:text="@string/descrip_config_idioma"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margen_general"
                    android:orientation="horizontal"
                    android:clickable="true">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margen_general"
                        android:orientation="vertical"
                        android:layout_weight="9">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/config_tema_oscuro"
                            android:textColor="@color/colorPrimary"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginTop="3dp"
                            android:textColor="?attr/textColorInputUser"
                            android:text="@string/descrip_tema_oscuro"/>

                    </LinearLayout>

                    <Switch
                        android:id="@+id/switchDarkMode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margen_general"
                        android:layout_gravity="center"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutVincularCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margen_general"
                    android:orientation="vertical"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margen_general"
                        android:textSize="15sp"
                        android:text="@string/config_vincula_cuenta"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margen_general"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp"
                        android:textColor="?attr/textColorInputUser"
                        android:text="@string/descrip_vincular_cuenta"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_general"
                    android:textSize="20sp"
                    android:text="General"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_general"
                    android:orientation="vertical"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="notificaciones"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp"
                        android:text="texto_notificaciones"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_general"
                    android:orientation="vertical"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="notificaciones"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp"
                        android:text="texto_notificaciones"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_general"
                    android:orientation="vertical"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="notificaciones"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp"
                        android:text="texto_notificaciones"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_general"
                    android:textSize="20sp"
                    android:text="General"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_general"
                    android:orientation="vertical"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="notificaciones"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp"
                        android:text="texto_notificaciones"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_general"
                    android:orientation="vertical"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="notificaciones"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp"
                        android:text="texto_notificaciones"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margen_general"
                    android:orientation="vertical"
                    android:clickable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:text="notificaciones"
                        android:textColor="@color/colorPrimary"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginTop="3dp"
                        android:text="texto_notificaciones"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</RelativeLayout>

